RESOLVED FIXED191638
WebKit.WebsiteDataStoreCustomPaths API test is failing when enabling process prewarming
https://bugs.webkit.org/show_bug.cgi?id=191638
Summary WebKit.WebsiteDataStoreCustomPaths API test is failing when enabling process ...
Chris Dumez
Reported 2018-11-14 09:31:58 PST
WebKit.WebsiteDataStoreCustomPaths API test is failing when enabling process prewarming.
Attachments
Patch (3.54 KB, patch)
2018-11-14 09:48 PST, Chris Dumez
no flags
Patch (8.68 KB, patch)
2018-11-14 15:38 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-11-14 09:48:33 PST
Ryosuke Niwa
Comment 2 2018-11-14 14:21:10 PST
Comment on attachment 354824 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=354824&action=review > Tools/ChangeLog:13 > + However, process prewarming constructs the default data store and passes it to the > + new WebProcessProxy if WebProcessPool::m_websiteDataStore is null. Hm... wouldn't this affect existing apps that would pre-warm processes?
Chris Dumez
Comment 3 2018-11-14 14:39:39 PST
(In reply to Ryosuke Niwa from comment #2) > Comment on attachment 354824 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=354824&action=review > > > Tools/ChangeLog:13 > > + However, process prewarming constructs the default data store and passes it to the > > + new WebProcessProxy if WebProcessPool::m_websiteDataStore is null. > > Hm... wouldn't this affect existing apps that would pre-warm processes? What's the big deal about creating the default data store if it does not exist yet?
Brady Eidson
Comment 4 2018-11-14 15:13:37 PST
(In reply to Chris Dumez from comment #3) > (In reply to Ryosuke Niwa from comment #2) > > Comment on attachment 354824 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=354824&action=review > > > > > Tools/ChangeLog:13 > > > + However, process prewarming constructs the default data store and passes it to the > > > + new WebProcessProxy if WebProcessPool::m_websiteDataStore is null. > > > > Hm... wouldn't this affect existing apps that would pre-warm processes? > > What's the big deal about creating the default data store if it does not > exist yet? You can't do it because it's a huge no-no on iOS.
Chris Dumez
Comment 5 2018-11-14 15:38:05 PST
Chris Dumez
Comment 6 2018-11-14 15:38:59 PST
Ok, I implemented an alternative approach which makes sure process prewarming tries to find a suitable data store but never creates the default one when it does not exist.
WebKit Commit Bot
Comment 7 2018-11-14 19:31:05 PST
Comment on attachment 354862 [details] Patch Clearing flags on attachment: 354862 Committed r238215: <https://trac.webkit.org/changeset/238215>
WebKit Commit Bot
Comment 8 2018-11-14 19:31:07 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2018-11-14 19:33:31 PST
Truitt Savell
Comment 10 2018-11-15 08:23:26 PST
Looks like the changes in https://trac.webkit.org/changeset/238215/webkit build: https://trac.webkit.org/changeset/238215/webkit has caused two API failures: TestWebKitAPI.WKProcessPool.InitialWarmedProcessUsed /Volumes/Data/slave/sierra-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessPreWarming.mm:62 Value of: [pool _hasPrewarmedWebProcess] Actual: false Expected: true /Volumes/Data/slave/sierra-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessPreWarming.mm:63 Expected equality of these values: 1U Which is: 1 [pool _webPageContentProcessCount] Which is: 0 TestWebKitAPI.WKProcessPool.WarmInitialProcess /Volumes/Data/slave/sierra-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessPreWarming.mm:47 Value of: [pool _hasPrewarmedWebProcess] Actual: false Expected: true
Chris Dumez
Comment 11 2018-11-15 08:35:01 PST
(In reply to Truitt Savell from comment #10) > Looks like the changes in https://trac.webkit.org/changeset/238215/webkit > > build: > https://trac.webkit.org/changeset/238215/webkit > > has caused two API failures: > > TestWebKitAPI.WKProcessPool.InitialWarmedProcessUsed > > > /Volumes/Data/slave/sierra-release/build/Tools/TestWebKitAPI/Tests/ > WebKitCocoa/ProcessPreWarming.mm:62 > Value of: [pool _hasPrewarmedWebProcess] > Actual: false > Expected: true > > > > /Volumes/Data/slave/sierra-release/build/Tools/TestWebKitAPI/Tests/ > WebKitCocoa/ProcessPreWarming.mm:63 > Expected equality of these values: > 1U > Which is: 1 > [pool _webPageContentProcessCount] > Which is: 0 > > > TestWebKitAPI.WKProcessPool.WarmInitialProcess > > > /Volumes/Data/slave/sierra-release/build/Tools/TestWebKitAPI/Tests/ > WebKitCocoa/ProcessPreWarming.mm:47 > Value of: [pool _hasPrewarmedWebProcess] > Actual: false > Expected: true Will look now, thanks. I believe the test just needs updating.
Chris Dumez
Comment 12 2018-11-15 08:50:18 PST
(In reply to Chris Dumez from comment #11) > (In reply to Truitt Savell from comment #10) > > Looks like the changes in https://trac.webkit.org/changeset/238215/webkit > > > > build: > > https://trac.webkit.org/changeset/238215/webkit > > > > has caused two API failures: > > > > TestWebKitAPI.WKProcessPool.InitialWarmedProcessUsed > > > > > > /Volumes/Data/slave/sierra-release/build/Tools/TestWebKitAPI/Tests/ > > WebKitCocoa/ProcessPreWarming.mm:62 > > Value of: [pool _hasPrewarmedWebProcess] > > Actual: false > > Expected: true > > > > > > > > /Volumes/Data/slave/sierra-release/build/Tools/TestWebKitAPI/Tests/ > > WebKitCocoa/ProcessPreWarming.mm:63 > > Expected equality of these values: > > 1U > > Which is: 1 > > [pool _webPageContentProcessCount] > > Which is: 0 > > > > > > TestWebKitAPI.WKProcessPool.WarmInitialProcess > > > > > > /Volumes/Data/slave/sierra-release/build/Tools/TestWebKitAPI/Tests/ > > WebKitCocoa/ProcessPreWarming.mm:47 > > Value of: [pool _hasPrewarmedWebProcess] > > Actual: false > > Expected: true > > Will look now, thanks. I believe the test just needs updating. https://bugs.webkit.org/show_bug.cgi?id=191693 Patch coming shortly.
Note You need to log in before you can comment on or make changes to this bug.